theme/static/css/hydroshare_core.css
/* ... */
.navbar-nav li#search .search-box {
	position: absolute;
	right: 0;
	bottom: -70px;
	width: 250px;
	padding: 10px;
	background: #eaeaea;
	background: rgba(0, 0, 0, 0.65);
	display: none;
}
.navbar-nav li#search i.margin-2 {
	margin-left: 2px;
}

/* ===== Pagination ===== */

.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  background-color: #00B4FF;
  border-color: #00B4FF;
}

/* Helper Classes */

.top-zero {
	margin-top: 0;
}
.bottom-15 {
	margin-bottom: 15px;
}
.ui-icon {
	color: #666;
}
.tab-1 {
	margin-right: 15px;
}
.tab-2 {
	margin-right: 30px;
}
.tab-3 {
	margin-right: 45px;
}
.tab-3 {
	margin-right: 60px;
}

/* Text colors */

.text-green {
	color: #72a53b;
}
.text-blue {
	color: #00B4FF;
}
.text-red {
	color: #E74C3C;
}
.text-turquoise {
	color: #1ABC9C;
}
.text-amethyst {
	color: #9B59B6;
}

/* Background colors */

.bg-green {
	background-color: #72a53b;
}
.bg-blue {
	background-color: #00B4FF;
}
.bg-red {
	background-color: #E74C3C;
}
.bg-turquoise {
	background-color: #1ABC9C;
}
.bg-amethyst {
	background-color: #9B59B6;
}

/* ===== Scroll to Top ===== */

.scrolltotop {
	height: 48px;
	width: 48px;
	border-color: #999;
	border: 1px solid rgba(0, 0, 0, 0.3);
	color: #999;
	color: rgba(0, 0, 0, 0.3);
	font-size: 18px;
	line-height: 38px;
	border-radius: 3px;
	text-align: center;
    background: rgba(255, 255, 255, 0.5);
}
/* ===== Resource edit page changes ===== */

#contact-table .icon-button{
    float:left;
    background-color: transparent;
    border: 0;
}

#comments{
    border: 1px solid #ddd;
    padding: 0 15px;
    padding-bottom: 15px;
    background: #F9F9F9;
}

.info-group table td{
    padding-left:15px;
}

#resourceSpecificTab{
    overflow-x:hidden;
}
#txt-title{
    width: calc(100% - 100px);
    font-size: 30px;
    margin-bottom: 30px;
    height: auto;
}

#txt-abstract{
    height: 155px;
}

span.remove{
    position: absolute;
    left: 0;
    height: 100% !important;
    background: #EEE;
    top: 0;
}

.form-control{
    margin-bottom:8px;
}

.no-padding{
    padding:0;
}

.icon-remove{
    font-size: 17px;
    top: 3px;
    left: 6px;
    color: rgb(217, 83, 79);
    cursor:pointer;
}

.icon-add{
    font-size: 17px;
    top: 3px;
    left: 1px;
    color: #5cb85c;
    cursor:pointer;
}

.icon-add:hover{
    color: #47a447;
}

.icon-remove:hover{
    color: rgb(168, 69, 66);
}

#panel-left{
    padding-right:8px;
    padding-left:0;
    margin-bottom: 10px;
}

#panel-right{
    padding-left:8px;
    padding-right:0;
    margin-bottom: 10px;
}
#add-keyword-wrapper{
    width: 200px;
    display: inline-flex;
}


/* ===== Resource UI changes ===== */
html, body{
    height:100%;
    /*background:#F4F4F4;*/
}

#btn-public.active{
    color:#FFF;
    background:#5cb85c;
}

#btn-private.active{
    color:#FFF;
    background:#d9534f
}

#id_user-wrapper{
    width: calc(100% - 97px);
    padding: 1px;
    border: 1px solid #CCC;
    height: 30px;
    margin-top: 1px;
    margin-left: -1px;
    -webkit-border-radius: 3px;
    -webkit-border-top-left-radius: 0px;
    -webkit-border-bottom-left-radius: 0px;
    -moz-border-radius: 3px;
    -moz-border-radius-topleft: 0px;
    -moz-border-radius-bottomleft: 0px;
    border-radius: 3px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}

#permission-panel #id_user-autocomplete{
    width: 100%;
    height: 100%;
    border: 0;
    padding: 0px 4px;
}

#permission-panel .panel-body{
    padding: 15px 0px;
}

span.hilight {
    background: #EEE;
    margin-left: 14px;
    width: calc(100% - 14px);
    height: 100%;
    display: block;
}

#form-sharing{
    margin-top: -6px;
    margin-left: 5px;
    margin-right: 5px;
}

.file-icon{
    margin-right: 5px;
    font-size: 28px;
    color: #8c8c8c;
    float:left;
    top: 6px;
}

table.table-plain {
    margin-bottom: 10px;
    width:100%;
}

table.table-plain td{
    padding-right: 10px;
}

.tab-elements{
    border:0;
}

.tab-elements > .panel-tabs > .nav-tabs{
    margin-bottom: 0;
    border:0;
}

.panel-tabs > .nav-tabs > li > a{
    color:#555;
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
}
.tab-elements > .tabs-body{
    max-height: 400px;
    min-height: 150px;
    border: 1px solid #ddd;
    padding: 10px;
    overflow: auto;
}

.panel-tabs table>tbody>tr>th{
    border:0;
}

.division-title {
    clear:left;
    font-size: 20px;
    font-weight: 500;
    margin-left: 7px;
    background-color: #FFF !important;

}

.page-title{
    font-weight: 500;
    margin: 30px 0px;
    margin-top: 10px;
    width: calc(100% - 100px);
}

.label-file-name{
    font-weight: bold;
}

.label-file-size{
    font-size:12px;
    margin-bottom: 0;
}

.table-plain > tbody > tr{
    /*border-bottom: 1px solid #ddd;*/
}

.table-plain > tbody > tr:last-child{
    border:none;
}


body > .container{
    /*Substract the height of the footer*/
    min-height: calc(100% - 277px);
    padding-top: 20px;
    /*background: #FFF;*/
    /*margin-top: 20px;*/
    /*border-radius: 5px;*/
    /*box-shadow: 0px 0px 5px #B5B5B5;*/
}

.icon-button {
    font-size: 22px;
    cursor: pointer;
    float: right;
    margin: 0 4px;
    padding: 5px;
    background-color: transparent;
    width: auto !important;

}

.custom-btn-toolbar .icon-button{
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    background-color: #FFF;
    border: 1px solid#adadad;

}

.custom-btn-toolbar .icon-button:hover {
    box-shadow: 0px 0px 5px #B2B2B2;
}
/* ... */

